identity pool created, test viewer components set up

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -108,7 +108,8 @@
           "attributes": [
             "UserPoolId",
             "AppClientIDWeb",
-            "AppClientID"
+            "AppClientID",
+            "IdentityPoolId"
           ],
           "category": "auth",
           "resourceName": "sesamestreetcorpus6fd64801"
