--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.3.5",
+    "@aws-amplify/storage": "^6.4.6",
     "@aws-amplify/ui-react": "^6.1.12",
+    "@aws-amplify/ui-react-storage": "^3.1.3",
+    "@recogito/annotorious": "^2.7.13",
+    "@recogito/annotorious-openseadragon": "^2.7.17",
     "aws-amplify": "^6.3.6",
+    "graphql": "^16.8.2",
+    "openseadragon": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-photo-view": "^1.2.6",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
